--- a/web/package.json
+++ b/web/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "next": "^14.2.4",
     "next-navigation": "^1.0.6",
     "react": "^18",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "router": "^1.3.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "typescript": "^5"
   }
 }
